support for protodep lib
