# api/native/logger.swagger.json
@@ -1,20 +1,11 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Webitel engine API",
-    "version": "23.02.0",
-    "contact": {
-      "name": "Webitel",
-      "url": "https://webitel.com",
-      "email": "support@webitel.com"
-    },
-    "license": {
-      "name": "MIT"
-    }
+    "title": "config_service.proto",
+    "version": "version not set"
   },
-  "host": "dev.webitel.com",
-  "basePath": "/api",
   "schemes": [
+    "http",
     "https"
   ],
   "consumes": [
@@ -32,16 +23,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/loggerSystemObjects"
-            }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
             }
           }
         },
@@ -67,16 +48,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/loggerConfigs"
-            }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
             }
           }
         },
@@ -126,7 +97,18 @@
               "type": "string",
               "enum": [
                 "cc_queue",
-                "schema"
+                "schema",
+                "users",
+                "devices",
+                "calendars",
+                "cc_list",
+                "cc_team",
+                "cc_agent",
+                "cc_resource",
+                "cc_resource_group",
+                "chat_bots",
+                "skills",
+                "buckets"
               ]
             }
           }
@@ -142,16 +124,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/loggerEmpty"
-            }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
             }
           }
         },
@@ -176,16 +148,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/loggerConfig"
-            }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
             }
           }
         },
@@ -213,16 +175,6 @@
             "schema": {
               "$ref": "#/definitions/loggerConfig"
             }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
-            }
           }
         },
         "parameters": [
@@ -246,16 +198,6 @@
             "schema": {
               "$ref": "#/definitions/loggerEmpty"
             }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
-            }
           }
         },
         "parameters": [
@@ -278,16 +220,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/loggerConfig"
-            }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
             }
           }
         },
@@ -319,16 +251,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/loggerConfig"
-            }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
             }
           }
         },
@@ -362,16 +284,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/loggerLogs"
-            }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
             }
           }
         },
@@ -419,31 +331,30 @@
             }
           },
           {
-            "name": "user.id",
+            "name": "user_id",
             "in": "query",
             "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "user.name",
-            "in": "query",
-            "required": false,
-            "type": "string"
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "int64"
+            }
           },
           {
             "name": "action",
             "in": "query",
             "required": false,
-            "type": "string",
-            "enum": [
-              "default_no_action",
-              "create",
-              "update",
-              "read",
-              "delete"
-            ],
-            "default": "default_no_action"
+            "type": "array",
+            "items": {
+              "type": "string",
+              "enum": [
+                "default_no_action",
+                "create",
+                "update",
+                "read",
+                "delete"
+              ]
+            }
           },
           {
             "name": "user_ip",
@@ -471,6 +382,67 @@
         ]
       }
     },
+    "/logger/schema/record/{schema_id}/versions": {
+      "get": {
+        "operationId": "Search",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/loggerSchemaVersions"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "schema_id",
+            "description": "REQUIRED filter",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "q",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "fields",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        ],
+        "tags": [
+          "SchemaVersionsService"
+        ]
+      }
+    },
     "/logger/user/{user_id}/logs": {
       "get": {
         "operationId": "SearchLogByUserId",
@@ -479,16 +451,6 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/loggerLogs"
-            }
-          },
-          "403": {
-            "description": "Returned when the user does not have permission to access the resource.",
-            "schema": {}
-          },
-          "404": {
-            "description": "Returned when the resource does not exist.",
-            "schema": {
-              "format": "string"
             }
           }
         },
@@ -537,32 +499,162 @@
             }
           },
           {
-            "name": "object.id",
+            "name": "object_id",
+            "description": "SPECIFIC filter.",
             "in": "query",
             "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "object.name",
-            "in": "query",
-            "required": false,
-            "type": "string"
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "int64"
+            }
           },
           {
             "name": "action",
             "description": "GENERAL filters.",
             "in": "query",
             "required": false,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "enum": [
+                "default_no_action",
+                "create",
+                "update",
+                "read",
+                "delete"
+              ]
+            }
+          },
+          {
+            "name": "user_ip",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "date_from",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "date_to",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "LoggerService"
+        ]
+      }
+    },
+    "/logger/{object}/record/{record_id}/logs": {
+      "get": {
+        "operationId": "SearchLogByRecordId",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/loggerLogs"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "object",
+            "description": "SPECIFIC filter",
+            "in": "path",
+            "required": true,
             "type": "string",
             "enum": [
-              "default_no_action",
-              "create",
-              "update",
-              "read",
-              "delete"
-            ],
-            "default": "default_no_action"
+              "cc_queue",
+              "schema",
+              "users",
+              "devices",
+              "calendars",
+              "cc_list",
+              "cc_team",
+              "cc_agent",
+              "cc_resource",
+              "cc_resource_group",
+              "chat_bots",
+              "skills",
+              "buckets"
+            ]
+          },
+          {
+            "name": "record_id",
+            "description": "REQUIRED filter",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "q",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "fields",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "action",
+            "description": "GENERAL filters.",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "enum": [
+                "default_no_action",
+                "create",
+                "update",
+                "read",
+                "delete"
+              ]
+            }
+          },
+          {
+            "name": "user_id",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "int64"
+            }
           },
           {
             "name": "user_ip",
@@ -607,7 +699,18 @@
       "type": "string",
       "enum": [
         "cc_queue",
-        "schema"
+        "schema",
+        "users",
+        "devices",
+        "calendars",
+        "cc_list",
+        "cc_team",
+        "cc_agent",
+        "cc_resource",
+        "cc_resource_group",
+        "chat_bots",
+        "skills",
+        "buckets"
       ],
       "default": "cc_queue"
     },
@@ -809,6 +912,55 @@
         }
       }
     },
+    "loggerSchemaVersion": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "schema_id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "created_on": {
+          "type": "string",
+          "format": "int64"
+        },
+        "created_by": {
+          "$ref": "#/definitions/loggerLookup"
+        },
+        "state": {
+          "type": "string"
+        },
+        "version": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "note": {
+          "type": "string"
+        }
+      }
+    },
+    "loggerSchemaVersions": {
+      "type": "object",
+      "properties": {
+        "page": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "next": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/loggerSchemaVersion"
+          }
+        }
+      }
+    },
     "loggerSystemObjects": {
       "type": "object",
       "properties": {
@@ -847,17 +999,5 @@
         }
       }
     }
-  },
-  "securityDefinitions": {
-    "AccessToken": {
-      "type": "apiKey",
-      "name": "X-Webitel-Access",
-      "in": "header"
-    }
-  },
-  "security": [
-    {
-      "AccessToken": []
-    }
-  ]
+  }
 }
