# api/native/schema_version_service.pb.go
@@ -1,0 +1,414 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.31.0
+// 	protoc        v3.21.6
+// source: schema_version_service.proto
+
+package proto
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type SearchSchemaVersionRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Page   int32    `protobuf:"varint,1,opt,name=page,proto3" json:"page,omitempty"`
+	Size   int32    `protobuf:"varint,2,opt,name=size,proto3" json:"size,omitempty"`
+	Q      string   `protobuf:"bytes,3,opt,name=q,proto3" json:"q,omitempty"`
+	Sort   string   `protobuf:"bytes,5,opt,name=sort,proto3" json:"sort,omitempty"`
+	Fields []string `protobuf:"bytes,6,rep,name=fields,proto3" json:"fields,omitempty"`
+	// REQUIRED filter
+	SchemaId int32 `protobuf:"varint,7,opt,name=schema_id,json=schemaId,proto3" json:"schema_id,omitempty"`
+}
+
+func (x *SearchSchemaVersionRequest) Reset() {
+	*x = SearchSchemaVersionRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_schema_version_service_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *SearchSchemaVersionRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SearchSchemaVersionRequest) ProtoMessage() {}
+
+func (x *SearchSchemaVersionRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_schema_version_service_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SearchSchemaVersionRequest.ProtoReflect.Descriptor instead.
+func (*SearchSchemaVersionRequest) Descriptor() ([]byte, []int) {
+	return file_schema_version_service_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *SearchSchemaVersionRequest) GetPage() int32 {
+	if x != nil {
+		return x.Page
+	}
+	return 0
+}
+
+func (x *SearchSchemaVersionRequest) GetSize() int32 {
+	if x != nil {
+		return x.Size
+	}
+	return 0
+}
+
+func (x *SearchSchemaVersionRequest) GetQ() string {
+	if x != nil {
+		return x.Q
+	}
+	return ""
+}
+
+func (x *SearchSchemaVersionRequest) GetSort() string {
+	if x != nil {
+		return x.Sort
+	}
+	return ""
+}
+
+func (x *SearchSchemaVersionRequest) GetFields() []string {
+	if x != nil {
+		return x.Fields
+	}
+	return nil
+}
+
+func (x *SearchSchemaVersionRequest) GetSchemaId() int32 {
+	if x != nil {
+		return x.SchemaId
+	}
+	return 0
+}
+
+type SchemaVersions struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Page  int32            `protobuf:"varint,1,opt,name=page,proto3" json:"page,omitempty"`
+	Next  bool             `protobuf:"varint,2,opt,name=next,proto3" json:"next,omitempty"`
+	Items []*SchemaVersion `protobuf:"bytes,3,rep,name=items,proto3" json:"items,omitempty"`
+}
+
+func (x *SchemaVersions) Reset() {
+	*x = SchemaVersions{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_schema_version_service_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *SchemaVersions) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SchemaVersions) ProtoMessage() {}
+
+func (x *SchemaVersions) ProtoReflect() protoreflect.Message {
+	mi := &file_schema_version_service_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SchemaVersions.ProtoReflect.Descriptor instead.
+func (*SchemaVersions) Descriptor() ([]byte, []int) {
+	return file_schema_version_service_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *SchemaVersions) GetPage() int32 {
+	if x != nil {
+		return x.Page
+	}
+	return 0
+}
+
+func (x *SchemaVersions) GetNext() bool {
+	if x != nil {
+		return x.Next
+	}
+	return false
+}
+
+func (x *SchemaVersions) GetItems() []*SchemaVersion {
+	if x != nil {
+		return x.Items
+	}
+	return nil
+}
+
+type SchemaVersion struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Id        int32   `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	SchemaId  int32   `protobuf:"varint,2,opt,name=schema_id,json=schemaId,proto3" json:"schema_id,omitempty"`
+	CreatedOn int64   `protobuf:"varint,3,opt,name=created_on,json=createdOn,proto3" json:"created_on,omitempty"`
+	CreatedBy *Lookup `protobuf:"bytes,4,opt,name=created_by,json=createdBy,proto3" json:"created_by,omitempty"`
+	State     string  `protobuf:"bytes,5,opt,name=state,proto3" json:"state,omitempty"`
+	Version   int32   `protobuf:"varint,6,opt,name=version,proto3" json:"version,omitempty"`
+	Note      string  `protobuf:"bytes,7,opt,name=note,proto3" json:"note,omitempty"`
+}
+
+func (x *SchemaVersion) Reset() {
+	*x = SchemaVersion{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_schema_version_service_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *SchemaVersion) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*SchemaVersion) ProtoMessage() {}
+
+func (x *SchemaVersion) ProtoReflect() protoreflect.Message {
+	mi := &file_schema_version_service_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use SchemaVersion.ProtoReflect.Descriptor instead.
+func (*SchemaVersion) Descriptor() ([]byte, []int) {
+	return file_schema_version_service_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *SchemaVersion) GetId() int32 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *SchemaVersion) GetSchemaId() int32 {
+	if x != nil {
+		return x.SchemaId
+	}
+	return 0
+}
+
+func (x *SchemaVersion) GetCreatedOn() int64 {
+	if x != nil {
+		return x.CreatedOn
+	}
+	return 0
+}
+
+func (x *SchemaVersion) GetCreatedBy() *Lookup {
+	if x != nil {
+		return x.CreatedBy
+	}
+	return nil
+}
+
+func (x *SchemaVersion) GetState() string {
+	if x != nil {
+		return x.State
+	}
+	return ""
+}
+
+func (x *SchemaVersion) GetVersion() int32 {
+	if x != nil {
+		return x.Version
+	}
+	return 0
+}
+
+func (x *SchemaVersion) GetNote() string {
+	if x != nil {
+		return x.Note
+	}
+	return ""
+}
+
+var File_schema_version_service_proto protoreflect.FileDescriptor
+
+var file_schema_version_service_proto_rawDesc = []byte{
+	0x0a, 0x1c, 0x73, 0x63, 0x68, 0x65, 0x6d, 0x61, 0x5f, 0x76, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e,
+	0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x06,
+	0x6c, 0x6f, 0x67, 0x67, 0x65, 0x72, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61,
+	0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x0c, 0x69, 0x6d, 0x70, 0x6f, 0x72, 0x74, 0x2e, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x22, 0x9b, 0x01, 0x0a, 0x1a, 0x53, 0x65, 0x61, 0x72, 0x63, 0x68, 0x53, 0x63, 0x68,
+	0x65, 0x6d, 0x61, 0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x12, 0x12, 0x0a, 0x04, 0x70, 0x61, 0x67, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52,
+	0x04, 0x70, 0x61, 0x67, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x73, 0x69, 0x7a, 0x65, 0x18, 0x02, 0x20,
+	0x01, 0x28, 0x05, 0x52, 0x04, 0x73, 0x69, 0x7a, 0x65, 0x12, 0x0c, 0x0a, 0x01, 0x71, 0x18, 0x03,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x01, 0x71, 0x12, 0x12, 0x0a, 0x04, 0x73, 0x6f, 0x72, 0x74, 0x18,
+	0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x73, 0x6f, 0x72, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x66,
+	0x69, 0x65, 0x6c, 0x64, 0x73, 0x18, 0x06, 0x20, 0x03, 0x28, 0x09, 0x52, 0x06, 0x66, 0x69, 0x65,
+	0x6c, 0x64, 0x73, 0x12, 0x1b, 0x0a, 0x09, 0x73, 0x63, 0x68, 0x65, 0x6d, 0x61, 0x5f, 0x69, 0x64,
+	0x18, 0x07, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x73, 0x63, 0x68, 0x65, 0x6d, 0x61, 0x49, 0x64,
+	0x22, 0x65, 0x0a, 0x0e, 0x53, 0x63, 0x68, 0x65, 0x6d, 0x61, 0x56, 0x65, 0x72, 0x73, 0x69, 0x6f,
+	0x6e, 0x73, 0x12, 0x12, 0x0a, 0x04, 0x70, 0x61, 0x67, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05,
+	0x52, 0x04, 0x70, 0x61, 0x67, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x65, 0x78, 0x74, 0x18, 0x02,
+	0x20, 0x01, 0x28, 0x08, 0x52, 0x04, 0x6e, 0x65, 0x78, 0x74, 0x12, 0x2b, 0x0a, 0x05, 0x69, 0x74,
+	0x65, 0x6d, 0x73, 0x18, 0x03, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x15, 0x2e, 0x6c, 0x6f, 0x67, 0x67,
+	0x65, 0x72, 0x2e, 0x53, 0x63, 0x68, 0x65, 0x6d, 0x61, 0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e,
+	0x52, 0x05, 0x69, 0x74, 0x65, 0x6d, 0x73, 0x22, 0xce, 0x01, 0x0a, 0x0d, 0x53, 0x63, 0x68, 0x65,
+	0x6d, 0x61, 0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18,
+	0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x02, 0x69, 0x64, 0x12, 0x1b, 0x0a, 0x09, 0x73, 0x63, 0x68,
+	0x65, 0x6d, 0x61, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x08, 0x73, 0x63,
+	0x68, 0x65, 0x6d, 0x61, 0x49, 0x64, 0x12, 0x1d, 0x0a, 0x0a, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65,
+	0x64, 0x5f, 0x6f, 0x6e, 0x18, 0x03, 0x20, 0x01, 0x28, 0x03, 0x52, 0x09, 0x63, 0x72, 0x65, 0x61,
+	0x74, 0x65, 0x64, 0x4f, 0x6e, 0x12, 0x2d, 0x0a, 0x0a, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64,
+	0x5f, 0x62, 0x79, 0x18, 0x04, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0e, 0x2e, 0x6c, 0x6f, 0x67, 0x67,
+	0x65, 0x72, 0x2e, 0x4c, 0x6f, 0x6f, 0x6b, 0x75, 0x70, 0x52, 0x09, 0x63, 0x72, 0x65, 0x61, 0x74,
+	0x65, 0x64, 0x42, 0x79, 0x12, 0x14, 0x0a, 0x05, 0x73, 0x74, 0x61, 0x74, 0x65, 0x18, 0x05, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x05, 0x73, 0x74, 0x61, 0x74, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x76, 0x65,
+	0x72, 0x73, 0x69, 0x6f, 0x6e, 0x18, 0x06, 0x20, 0x01, 0x28, 0x05, 0x52, 0x07, 0x76, 0x65, 0x72,
+	0x73, 0x69, 0x6f, 0x6e, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x6f, 0x74, 0x65, 0x18, 0x07, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x04, 0x6e, 0x6f, 0x74, 0x65, 0x32, 0x91, 0x01, 0x0a, 0x15, 0x53, 0x63, 0x68,
+	0x65, 0x6d, 0x61, 0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x73, 0x53, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x12, 0x78, 0x0a, 0x06, 0x53, 0x65, 0x61, 0x72, 0x63, 0x68, 0x12, 0x22, 0x2e, 0x6c,
+	0x6f, 0x67, 0x67, 0x65, 0x72, 0x2e, 0x53, 0x65, 0x61, 0x72, 0x63, 0x68, 0x53, 0x63, 0x68, 0x65,
+	0x6d, 0x61, 0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x16, 0x2e, 0x6c, 0x6f, 0x67, 0x67, 0x65, 0x72, 0x2e, 0x53, 0x63, 0x68, 0x65, 0x6d, 0x61,
+	0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x73, 0x22, 0x32, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x2c,
+	0x12, 0x2a, 0x2f, 0x6c, 0x6f, 0x67, 0x67, 0x65, 0x72, 0x2f, 0x73, 0x63, 0x68, 0x65, 0x6d, 0x61,
+	0x2f, 0x72, 0x65, 0x63, 0x6f, 0x72, 0x64, 0x2f, 0x7b, 0x73, 0x63, 0x68, 0x65, 0x6d, 0x61, 0x5f,
+	0x69, 0x64, 0x7d, 0x2f, 0x76, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x73, 0x42, 0x16, 0x5a, 0x14,
+	0x77, 0x65, 0x62, 0x69, 0x74, 0x65, 0x6c, 0x5f, 0x6c, 0x6f, 0x67, 0x67, 0x65, 0x72, 0x2f, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_schema_version_service_proto_rawDescOnce sync.Once
+	file_schema_version_service_proto_rawDescData = file_schema_version_service_proto_rawDesc
+)
+
+func file_schema_version_service_proto_rawDescGZIP() []byte {
+	file_schema_version_service_proto_rawDescOnce.Do(func() {
+		file_schema_version_service_proto_rawDescData = protoimpl.X.CompressGZIP(file_schema_version_service_proto_rawDescData)
+	})
+	return file_schema_version_service_proto_rawDescData
+}
+
+var file_schema_version_service_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_schema_version_service_proto_goTypes = []interface{}{
+	(*SearchSchemaVersionRequest)(nil), // 0: logger.SearchSchemaVersionRequest
+	(*SchemaVersions)(nil),             // 1: logger.SchemaVersions
+	(*SchemaVersion)(nil),              // 2: logger.SchemaVersion
+	(*Lookup)(nil),                     // 3: logger.Lookup
+}
+var file_schema_version_service_proto_depIdxs = []int32{
+	2, // 0: logger.SchemaVersions.items:type_name -> logger.SchemaVersion
+	3, // 1: logger.SchemaVersion.created_by:type_name -> logger.Lookup
+	0, // 2: logger.SchemaVersionsService.Search:input_type -> logger.SearchSchemaVersionRequest
+	1, // 3: logger.SchemaVersionsService.Search:output_type -> logger.SchemaVersions
+	3, // [3:4] is the sub-list for method output_type
+	2, // [2:3] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
+}
+
+func init() { file_schema_version_service_proto_init() }
+func file_schema_version_service_proto_init() {
+	if File_schema_version_service_proto != nil {
+		return
+	}
+	file_import_proto_init()
+	if !protoimpl.UnsafeEnabled {
+		file_schema_version_service_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*SearchSchemaVersionRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_schema_version_service_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*SchemaVersions); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_schema_version_service_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*SchemaVersion); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_schema_version_service_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   3,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_schema_version_service_proto_goTypes,
+		DependencyIndexes: file_schema_version_service_proto_depIdxs,
+		MessageInfos:      file_schema_version_service_proto_msgTypes,
+	}.Build()
+	File_schema_version_service_proto = out.File
+	file_schema_version_service_proto_rawDesc = nil
+	file_schema_version_service_proto_goTypes = nil
+	file_schema_version_service_proto_depIdxs = nil
+}
